third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/trailing-us-exp-2.stderr
TOML parse error at line 1, column 25
  |
1 | trailing-us-exp-2 = 1.2_e2
  |                         ^
invalid floating-point number
expected digit, digit
